# milkshell

./: .ctrlp_ignore  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  lerna.json  mix.exs  notes  rebar.config
apps/milkshell/src/: milkshell.app.src  milkshell_app.erl  milkshell_lexer.erl  milkshell_lexer.xrl  milkshell_misc.erl  milkshell_parser.erl  milkshell_parser.yrl  milkshell_sup.erl  ws_h.erl
config/: vm.args
elixir/: README.md
elixir/test/: milkshell_test.exs
erlang/: erlang_cheatsheet.erl  rebar.config
erlang/config/: sys.config
lib/: milkshell.ex
milk_ui/: .flowconfig  .gitignore  app.json  package.json
milk_ui/android/: settings.gradle
milk_ui/android/app/: BUCK  build.gradle
milk_ui/ios/: Podfile
milk_ui/ios/milk_ui/: AppDelegate.m  Info.plist
milk_ui/ios/milk_ui.xcodeproj/: project.pbxproj
milk_ui/ios/milk_ui.xcworkspace/: contents.xcworkspacedata
milk_ui/ios/milk_uiTests/: milk_uiTests.m
milk_ui/macos/milk_ui/: AppDelegate.m  Info.plist
milk_ui/macos/milk_ui.xcodeproj/: project.pbxproj
milk_ui/macos/milk_uiTests/: milk_uiTests.m
milkui/: .gitignore  App.js  app.json  package.json  ws.js
milkui/android/: settings.gradle
milkui/android/app/: BUCK  build.gradle
milkui/ios/: Podfile
milkui/ios/milkui/: Info.plist  (+1 more)
milkui/src/: Command.js  CommandList.js  parsedtextdemo.js  style.js  unpack.js  ws.js
milky_ui_rn/: App.js  app.json  core.js  package.json
milky_ui_rn/android/: settings.gradle
milky_ui_rn/ios/: Podfile
milky_ui_rnmac/: App.js  index.js  package.json
milky_ui_rnweb/: package.json
milky_ui_rnweb/config/: webpack.config.js
python/: Pipfile  milkshell.py  pyproject.toml  setup.py
rnmac/: index.js  package-lock.json  package.json
rust/: Cargo.toml
rust/src/: main.rs  milkshell.pest
src/: broadcast_replay.rs  codegen.rs  dir_scan.rs  launch.rs  main.rs  milkshell.pest  multiplexer.rs  parse.rs  stream_scan.rs  ws.rs
(+57 files in other folders)
