[package]
name = "milkshell"
version = "0.1.0"
authors = ["Lauren Chris Horne <lahwran0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
regex = "1.3.1"
lazy_static = "1.4.0"
unindent = "0.1.5"
serde_json = "1.0"
crossbeam = "0.7.3"

tokio = { version = "0.2", features = ["full"] }
tokio-tungstenite = "*"
tungstenite = "*"
futures = "*"

# looked cool, trait requirements didn't work
#futures-intrusive = "0.3.0"

[dependencies.async-std]
version = "1.5.0"
features = ["unstable"]