[package]
name = "milkshell"
version = "0.1.0"
authors = ["Lauren Chris Horne <lahwran0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
regex = "1.3.1"
lazy_static = "1.4.0"
unindent = "0.1.5"
serde_json = "1.0"